--- a/Nien_luan/nbproject/project.properties
+++ b/Nien_luan/nbproject/project.properties
@@ -29,11 +29,12 @@ dist.jar=${dist.dir}/Nien_luan.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.26.jar=D:\\KH1_2021-2022\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26.jar
+file.reference.mysql-connector-java-8.0.26.jar-1=../library/mysql-connector-java-8.0.26.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.26.jar}
+    ${file.reference.mysql-connector-java-8.0.26.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.26.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,7 +67,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${file.reference.mysql-connector-java-8.0.26.jar}
+    ${file.reference.mysql-connector-java-8.0.26.jar-1}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
