--- a/Nien_luan/nbproject/project.properties
+++ b/Nien_luan/nbproject/project.properties
@@ -61,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=nien_luan.Nien_luan
+main.class=nien_luan.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
